--- a/frontend/src/styles/responsive-grid.css
+++ b/frontend/src/styles/responsive-grid.css
@@ -68,6 +68,11 @@
     width: 100%
 }
 
+.col-auto {
+    flex: 0 0 auto;
+    width: auto
+}
+
 .col-hidden {
     display: none;
 }
@@ -136,6 +141,11 @@
     .col-sm-12 {
         flex: 0 0 auto;
         width: 100%
+    }
+
+    .col-sm-auto {
+        flex: 0 0 auto;
+        width: auto
     }
 
     .col-sm-hidden {
@@ -208,6 +218,11 @@
     .col-lg-12 {
         flex: 0 0 auto;
         width: 100%
+    }
+
+    .col-lg-auto {
+        flex: 0 0 auto;
+        width: auto
     }
 
     .col-lg-hidden {
